gccida/g1/push_member_name
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:5021:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0 - spelling_base; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:5030:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[( int)v3]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:5032:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v5 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:5033:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->kind = 2; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:5035:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v5 + 1; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_member_name/src/obj/c-typeck.o] Error 1
